update dropdown questions and options

--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -16,14 +16,14 @@
       <label for="number" id="number-label">Enter your age: <input id="number" name="number" type="number" min="13" max="99" pattern="[0-9]" placeholder="age"></label>
     </fieldset>
     <fieldset>
-      <label for="dropdown">What is your favourite colour? <select id="dropdown" name="dropdown">
+      <label for="dropdown">How many hours  do you get to play computer games each week? <select id="dropdown" name="dropdown">
         <option value="">(select one)</option>
-        <option value="1">Red</option>
-        <option value="2">Yellow</option>
-        <option value="3">Blue</option>
-        <option value="4">Orange</option>
-        <option value="5">Green</option>
-        <option value="6">Purple</option>
+        <option value="1">None</option>
+        <option value="2">1 - 2</option>
+        <option value="3">3 - 5</option>
+        <option value="4">6 - 10</option>
+        <option value="5">11 - 20</option>
+        <option value="6">20+</option>
         </select>
       </label>
     </fieldset>
@@ -34,7 +34,7 @@
       <label for="gender-nonbinary"><input id="gender-nonbinary" type="radio" name="gender-type" class="inline"> Non-binary</label>
       <label></label>
     </fieldset>
-
+    
   </form>
   
 
