update radio question and options

--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -28,13 +28,13 @@
       </label>
     </fieldset>
     <fieldset>
-      <p>Enter your gender:</p>
-      <label for="gender-male"><input id="gender-male" type="radio" name="gender-type"> Male</label>
-      <label for="gender-female"><input id="gender-female" type="radio" name="gender-type" class="inline"> Female</label>
-      <label for="gender-nonbinary"><input id="gender-nonbinary" type="radio" name="gender-type" class="inline"> Non-binary</label>
+      <p>What time of day do you normally play? </p>
+      <label for="time-am"><input id="time=am" type="radio" name="time-type"> AM</label>
+      <label for="time-pm"><input id="time-pm" type="radio" name="time-type" class="inline"> PM</label>
+      <label for="time-both"><input id="time-both" type="radio" name="time-type" class="inline"> Both</label>
       <label></label>
     </fieldset>
-    
+
   </form>
   
 
