--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -34,7 +34,20 @@
       <label for="time-both"><input id="time-both" type="radio" name="time-type" class="inline"> Both</label>
       <label></label>
     </fieldset>
-
+    <fieldset>
+        
+    </fieldset>
+    <fieldset>
+        <p>What gaming platforms do you play on? (Check all that apply)</p>
+        <label for="platform-xbox"><input id="platform-xbox" type="checkbox" name="platform-type"> Xbox</label><br>
+        <label for="platform-ps"><input id="platform-ps" type="checkbox" name="platform-type"> Playstation</label><br>
+        <label for="platform-switch"><input id="platform-switch" type="checkbox" name="platform-type"> Switch</label><br>
+        <label for="platform-pc"><input id="platform-pc" type="checkbox" name="platform-type"> PC</label><br>
+        <label for="platform-other"><input id="platform-other" type="checkbox" name="platform-type"> Other</label><br>
+    </fieldset>
+    <fieldset>
+        <label for="comments" id="comment-label">Please describe the reasons why you like to game:<br><textarea placeholder="Enter your comment here..."></textarea></label>
+    </fieldset>
   </form>
   
 
