--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Build a Survey Form</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/survey-form/style.css">
 </head>
 <body>
   <h1 id="title">Survey Form</h1>
@@ -39,15 +39,16 @@
     </fieldset>
     <fieldset>
         <p>What gaming platforms do you play on? (Check all that apply)</p>
-        <label for="platform-xbox"><input id="platform-xbox" type="checkbox" name="platform-type"> Xbox</label><br>
-        <label for="platform-ps"><input id="platform-ps" type="checkbox" name="platform-type"> Playstation</label><br>
-        <label for="platform-switch"><input id="platform-switch" type="checkbox" name="platform-type"> Switch</label><br>
-        <label for="platform-pc"><input id="platform-pc" type="checkbox" name="platform-type"> PC</label><br>
-        <label for="platform-other"><input id="platform-other" type="checkbox" name="platform-type"> Other</label><br>
+        <label for="platform-xbox"><input id="platform-xbox" type="checkbox" name="platform-type"> Xbox</label>
+        <label for="platform-ps"><input id="platform-ps" type="checkbox" name="platform-type"> Playstation</label>
+        <label for="platform-switch"><input id="platform-switch" type="checkbox" name="platform-type"> Switch</label>
+        <label for="platform-pc"><input id="platform-pc" type="checkbox" name="platform-type"> PC</label>
+        <label for="platform-other"><input id="platform-other" type="checkbox" name="platform-type"> Other</label>
     </fieldset>
     <fieldset>
         <label for="comments" id="comment-label">Please describe the reasons why you like to game:<br><textarea placeholder="Enter your comment here..."></textarea></label>
     </fieldset>
+    <input type="submit" value="Submit"/>
   </form>
   
 
