--- a/survey-form/index.html
+++ b/survey-form/index.html
@@ -10,7 +10,7 @@
   <h1 id="title">Survey Form</h1>
   <p id="description">Thank you for taking the time to help us improve the platform</p>
   <form id="survey-form">
-    <fieldset>
+    <fieldset class="form-details">
       <label for="name" id="name-label">Enter your name: <input id="name" name="name" type="text" placeholder="your name" required></label>
       <label for="email" id="email-label">Enter your email: <input id="email" name="email" type="email" placeholder="your email" required></label>
       <label for="number" id="number-label">Enter your age: <input id="number" name="number" type="number" min="13" max="99" pattern="[0-9]" placeholder="age"></label>
